--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,23 @@
 }
 
 
+.formFooter-heightMask {
+    margin: -90px;
+}
+
+#contacto {
+    margin-top: -30px;
+}
+
+.form-line {
+    margin-bottom: -34px;
+}
+
+div.header-large {
+    margin: 0 -23px;
+    padding: -14.5em 52px;
+}
+
 /*** Spinner ****/
 #spinner {
     opacity: 0;
